--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.7.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "node-fetch": "^2.6.7",
